Add test script to package file, using babel-register as compiler.

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "babel-register": "^6.8.0",
     "chai": "*",
     "mocha": "*"
+  },
+  "scripts": {
+    "test": "mocha --compilers js:babel-register"
   }
 }
