Refactor package file, remove old dependencies and add new ones for es6

--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "preludejs": "git://github.com/loop-recur/PreludeJS.git",
-    "ramda": "0.19.x",
-    "string-utilties": "git://github.com/eschmitt/string-utilities.git"
+    "ramda": "0.19.x"
   },
   "devDependencies": {
-    "babel-register": "^6.8.0",
-    "chai": "*",
-    "mocha": "*"
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "chai": "^3.5.0",
+    "growl": "^1.9.2",
+    "mocha": "^2.5.3"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-register"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js --recursive --growl",
+    "test:watch": "npm run test -- --watch"
   }
 }
